Update on Overleaf.

--- a/refs.bib
+++ b/refs.bib
@@ -4219,11 +4219,13 @@
     issn = {15302075}
 }
 
-@inproceedings{Leather2014,
+@article{Leather2014,
     title = {{Automatic Feature Generation for Machine Learning Based Optimizing Compilation}},
-    year = {2009},
-    booktitle = {CGO},
+    year = {2014},
+    journal = {TACO},
     author = {Leather, H. and Bonilla, E. and O'Boyle, M.},
+    number = {1},
+    volume = {11},
     publisher = {IEEE}
 }
 
@@ -5637,7 +5639,7 @@
     title = {{Automated Whitebox Fuzz Testing}},
     year = {2008},
     booktitle = {NDSS},
-    author = {Godefroid, Patrice and Levin, Michael Y. and Molnar, David a.},
+    author = {Godefroid, P. and Levin, M. Y. and Molnar, D.},
     url = {http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.151.9430&amp;rep=rep1&amp;type=pdf},
     issn = {1064-3745},
     pmid = {7581676}
@@ -10161,9 +10163,11 @@
     isbn = {9781510810587}
 }
 
-@article{Ren,
+@inproceedings{Ren,
     title = {{Optimise Web Browsing on Heterogeneous Mobile Platforms: A Machine Learning Based Approach}},
-    author = {Ren, Jie and Gao, Ling and Wang, Zheng},
+    year = {2017},
+    booktitle = {INFOCOM},
+    author = {Ren, J. and Gao, L. and Wang, Z.},
     keywords = {big.LITTLE, energy optimisation, mobile web browsing, mobile workloads}
 }
 
@@ -10218,24 +10222,18 @@
     issn = {02721732}
 }
 
+@inproceedings{Melnik2010,
+    title = {{Dremel: Interactive Analysis of Web-Scale Datasets}},
+    year = {2010},
+    booktitle = {VLDB},
+    author = {Melnik, S. and Gubarev, A. and Long, J. J. and Romer, G. and Shivakumar, S. and Tolton, M. and Vassilakis, T.}
+}
+
 @article{Jozefowicz2016a,
     title = {{Exploring the Limits of Language Modeling}},
     year = {2016},
     journal = {arXiv:1602.02410},
     author = {Jozefowicz, R. and Vinyals, O. and Schuster, M. and Shazeer, N. and Wu, Y.}
-}
-
-@inproceedings{Melnik2010a,
-    title = {{Dremel: Interactive Analysis of Web-Scale Datasets}},
-    year = {2010},
-    booktitle = {VLDB},
-    author = {Melnik, S. and Gubarev, A. and Long, J. J. and Romer, G. and Shivakumar, S. and Tolton, M. and Vassilakis, T.},
-    url = {http://www.vldb2010.org/accept.htm},
-    isbn = {2150-8097},
-    doi = {10.1145/1953122.1953148},
-    issn = {00010782},
-    pmid = {17548183},
-    arxivId = {1302.0309}
 }
 
 @article{Potvin2016,
@@ -11203,7 +11201,7 @@
 }
 
 @inproceedings{Oda2015,
-    title = {{Learning to Generate Pseudo-Code from Source Code Using Statistical Machine Translation (T)}},
+    title = {{Learning to Generate Pseudo-Code from Source Code Using Statistical Machine Translation}},
     year = {2015},
     booktitle = {ASE},
     author = {Oda, Y. and Fudaba, H. and Neubig, G. and Hata, H. and Sakti, S. and Toda, T. and Nakamura, S.},
@@ -11584,7 +11582,7 @@
 }
 
 @article{Chen2013,
-    title = {{Taming compiler fuzzers}},
+    title = {{Taming Compiler Fuzzers}},
     year = {2013},
     journal = {PLDI},
     author = {Chen, Y. and Groce, A. and Zhang, C. and Wong, W. and Fern, X. and Eide, E. and Regehr, J.},
@@ -11605,7 +11603,8 @@
     title = {{End-to-end Deep Learning of Optimization Heuristics}},
     year = {2017},
     booktitle = {PACT, to appear in},
-    author = {Cummins, C. and Petoumenos, P. and Wang, Z. and Leather, H.}
+    author = {Cummins, C. and Petoumenos, P. and Wang, Z. and Leather, H.},
+    publisher = {IEEE}
 }
 
 @inproceedings{Han2017,
@@ -11622,4 +11621,202 @@
     booktitle = {ISSTA},
     author = {Sun, C. and Le, V. and Zhang, Q. and Su, Z.},
     keywords = {Keywords empirical studies, compiler bugs, compiler testing}
+}
+
+@inproceedings{Taylor,
+    title = {{Adaptive Optimization for OpenCL Programs on Embedded Heterogeneous Systems}},
+    year = {2017},
+    booktitle = {LCTES},
+    author = {Taylor, B. and Marco, V. S. and Wang, Z.},
+    isbn = {9781450350303},
+    keywords = {energy efficiency, heterogeneous multi-cores, opencl, predictive modeling}
+}
+
+@article{Ashouri2017,
+    title = {{MiCOMP: Mitigating the Compiler Phase-ordering Problem Using Optimization Sub-sequences and Machine Learning}},
+    year = {2017},
+    journal = {TACO},
+    author = {Ashouri, A. H. and Bignoli, A. and Palermo, G. and Silvano, C. and Kulkarni, S. and Cavazos, J.}
+}
+
+@inproceedings{Sun2016a,
+    title = {{Finding Compiler Bugs via Live Code Mutation}},
+    year = {2016},
+    booktitle = {OOPSLA},
+    author = {Sun, C. and Le, V. and Su, Z.},
+    keywords = {automated testing, compiler testing, equivalent, miscompilation, program variants}
+}
+
+@article{Koukoutos2017a,
+    title = {{On Repair with Probabilistic Attribute Grammars}},
+    year = {2017},
+    author = {Koukoutos, Manos and Raghothaman, Mukund and Kneuss, Etienne and Kuncak, Viktor},
+    url = {http://arxiv.org/abs/1707.04148},
+    arxivId = {1707.04148}
+}
+
+@article{Le2015,
+    title = {{Finding deep compiler bugs via guided stochastic program mutation}},
+    year = {2015},
+    journal = {Proceedings of the 2015 ACM SIGPLAN International Conference on Object-Oriented Programming, Systems, Languages, and Applications - OOPSLA 2015},
+    author = {Le, Vu and Sun, Chengnian and Su, Zhendong},
+    pages = {386--399},
+    url = {http://dl.acm.org/citation.cfm?doid=2814270.2814319},
+    isbn = {9781450336895},
+    doi = {10.1145/2814270.2814319},
+    issn = {03621340},
+    keywords = {automated testing, compiler testing, equivalent program variants, markov chain monte carlo}
+}
+
+@article{Pei2017,
+    title = {{DeepXplore: Automated Whitebox Testing of Deep Learning Systems}},
+    year = {2017},
+    journal = {arXiv 1705.06640},
+    author = {Pei, Kexin and Cao, Yinzhi and Yang, Junfeng and Jana, Suman},
+    url = {http://arxiv.org/abs/1705.06640},
+    arxivId = {1705.06640}
+}
+
+@inproceedings{Godefroid2008a,
+    title = {{Grammar-based whitebox fuzzing}},
+    year = {2008},
+    booktitle = {PLDI},
+    author = {Godefroid, P and Kiezun, A and Levin, M. Y.},
+    isbn = {9781595938602},
+    doi = {10.1145/1379022.1375607},
+    issn = {03621340},
+    keywords = {all or part of, automatic test generation, grammars, is granted without fee, or hard copies of, permission to make digital, personal or classroom use, program verification, provided that copies are, software testing, this work for}
+}
+
+@article{Le2013,
+    title = {{Compiler validation via equivalence modulo inputs}},
+    year = {2013},
+    journal = {Proceedings of the 35th ACM SIGPLAN Conference on Programming Language Design and Implementation - PLDI '14},
+    author = {Le, Vu and Afshari, Mehrdad and Su, Zhendong},
+    pages = {216--226},
+    url = {http://dl.acm.org.globalproxy.cvt.dk/citation.cfm?id=2594291.2594334},
+    isbn = {9781450327848},
+    doi = {10.1145/2594291.2594334},
+    issn = {03621340},
+    keywords = {automated testing, compiler testing, equivalent program variants, miscompilation}
+}
+
+@article{Chen2017,
+    title = {{Learning to Prioritize Test Programs for Compiler Testing}},
+    year = {2017},
+    journal = {Icse},
+    author = {Chen, Junjie and Bai, Yanwei and Hao, Dan and Xiong, Yingfei and Zhang, Hongyu and Xie, Bing},
+    pages = {700--711},
+    isbn = {978-1-5386-3868-2},
+    doi = {10.1109/ICSE.2017.70}
+}
+
+@article{White,
+    title = {{Sorting and Transforming Program Repair Ingredients via Deep Learning Code Similarities}},
+    author = {White, Martin and Tufano, Michele and Mart{\'{i}}nez, Matías and Monperrus, Martin and Poshyvanyk, Denys},
+    arxivId = {arXiv:1707.04742v1}
+}
+
+@article{Sahoo2013,
+    title = {{Using likely invariants for automated software fault localization}},
+    year = {2013},
+    journal = {Asplos},
+    author = {Sahoo, Swarup Kumar and Criswell, John and Geigle, Chase and Adve, Vikram},
+    pages = {139},
+    url = {http://dl.acm.org/citation.cfm?doid=2451116.2451131},
+    isbn = {9781450318709},
+    doi = {10.1145/2451116.2451131},
+    issn = {0362-1340},
+    keywords = {bug diagnosis, debugging, fault localization, invariants, program analysis, root cause, software reliability, testing}
+}
+
+@article{Huo,
+    title = {{Enhancing the Unified Features to Locate Buggy Files by Exploiting the Sequential Nature of Source Code ∗}},
+    author = {Huo, Xuan and Li, Ming}
+}
+
+@inproceedings{Koc2017,
+    title = {{Learning a classifier for false positive error reports emitted by static code analysis tools}},
+    year = {2017},
+    booktitle = {MAPL},
+    author = {Koc, Ugur and Saadatpanah, Parsa and Foster, Jeffrey S. and Porter, Adam A.},
+    url = {http://dl.acm.org/citation.cfm?doid=3088525.3088675},
+    isbn = {9781450350716},
+    doi = {10.1145/3088525.3088675},
+    keywords = {classifier, long short-term memories, naive bayes, program slicing, static code analysis}
+}
+
+@article{Zhangb,
+    title = {{Automated Transplantation and Differential Testing for Clones}},
+    journal = {Proceedings of the 39th International Conference on Software Engineering (ICSE'17)},
+    author = {Zhang, Tianyi and Kim, Miryung},
+    url = {http://web.cs.ucla.edu/~tianyi.zhang/grafter.pdf},
+    isbn = {978-1-5386-3868-2},
+    doi = {10.1109/ICSE.2017.67}
+}
+
+@article{Heo2017a,
+    title = {{Machine-Learning-Guided Selectively Unsound Static Analysis}},
+    year = {2017},
+    journal = {Icse},
+    author = {Heo, Kihong and Oh, Hakjoo and Yi, Kwangkeun},
+    pages = {519--529},
+    isbn = {978-1-5386-3868-2},
+    doi = {10.1109/ICSE.2017.54},
+    keywords = {-static analysis, machine learning, unsoundness}
+}
+
+@article{Cadar2016a,
+    title = {{Analysing the Program Analyser}},
+    year = {2016},
+    journal = {ICSE: International Conference on Software Engineering Companion},
+    author = {Cadar, Cristian and Donaldson, Alastair F.},
+    pages = {765--768},
+    url = {http://dl.acm.org/citation.cfm?doid=2889160.2889206},
+    isbn = {9781450342056},
+    doi = {10.1145/2889160.2889206},
+    keywords = {cross-checking, program analysis, program generators, program transformations, testing}
+}
+
+@article{Rojas2017,
+    title = {{Code Defenders: Crowdsourcing Effective Tests and Subtle Mutants with a Mutation Testing Game}},
+    year = {2017},
+    journal = {Proceedings of the 39th International Conference on Software Engineering},
+    author = {Rojas, José Miguel and White, Thomas D and Clegg, Benjamin S and Fraser, Gordon},
+    pages = {677--688},
+    url = {https://doi.org/10.1109/ICSE.2017.68},
+    isbn = {978-1-5386-3868-2},
+    doi = {10.1109/ICSE.2017.68}
+}
+
+@article{Nandi2017,
+    title = {{Debugging Probabilistic Programs}},
+    year = {2017},
+    author = {Nandi, Chandrakana and Grossman, Dan and Sampson, Adrian},
+    keywords = {debugging, probabilistic programming, program analy-, sis, statistical inference}
+}
+
+@article{Barik2017,
+    title = {{Do Developers Read Compiler Error Messages ?}},
+    year = {2017},
+    author = {Barik, Titus and Smith, Justin and Lubick, Kevin and Holmes, Elisabeth and Feng, Jing and Murphy-hill, Emerson and Parnin, Chris},
+    pages = {575--585},
+    doi = {10.1109/ICSE.2017.59},
+    keywords = {-compiler errors, eye tracking, ficulty of reading error, integrated develop-, ment environments, messages is comparable to, programmer comprehension, reading, the, visual}
+}
+
+@article{Heo2017,
+    title = {{Machine-Learning-Guided Selectively Unsound Static Analysis}},
+    year = {2017},
+    journal = {Icse},
+    author = {Heo, Kihong and Oh, Hakjoo and Yi, Kwangkeun},
+    pages = {519--529},
+    isbn = {978-1-5386-3868-2},
+    doi = {10.1109/ICSE.2017.54},
+    keywords = {-static analysis, machine learning, unsoundness}
+}
+
+@article{McnallyFuzzingArt,
+    title = {{Fuzzing : The State of the Art}},
+    author = {Mcnally, Richard and Yiu, Ken and Grove, Duncan}
 }
